--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'alphablocks.mc-play.net'.">
 	<meta property="og:title" content="MyServer - Official Website Portal">
 	<meta property="og:site_name" content="MyServer">
-	<meta property="og:description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'play.myserver.net'.">
+	<meta property="og:description" content="MyServer is a new and awesome Minecraft server. You can join with the IP 'alphablocks.mc-play.net'.">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
@@ -34,17 +34,18 @@
 			<a href="#" class="item forums">
 			<div>
 				<img src="img/forums.png" alt="Minecraft forums icon" class="img">
-				<p class="subtitle">chat on our</p>
-				<p class="title">Forums</p>
+				<p class="subtitle">Chatte auf unserem</p>
+				<p class="title">SOON</p>
+				<p class="title">Forum</p>
 			</div>
 			</a>
 
 			<!-- Replace # with your store URL -->
-			<a href="#" class="item store">
+			<a href="http://194.93.56.64:8123/" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
-				<p class="subtitle">donate on our</p>
-				<p class="title">Store</p>
+				<p class="subtitle">Schaue auf die</p>
+				<p class="title">Livekarte</p>
 			</div>
 			</a>
 
@@ -52,8 +53,9 @@
 			<a href="#" class="item vote">
 			<div>
 				<img src="img/vote.png" alt="Minecraft voting icon" class="img">
-				<p class="subtitle">support us by</p>
-				<p class="title">Voting</p>
+				<p class="subtitle">Supporte uns mit einem</p>
+				<p class="title">SOON</p>
+				<p class="title">Vote</p>
 			</div>
 			</a>
 
